kubernetes/stayapp/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stayapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: stayapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stayapp
    spec:
      containers:
      - image: 961143247577.dkr.ecr.ap-southeast-2.amazonaws.com/stayapp:latest
        imagePullPolicy: Always
        name: stayapp-flask-server
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 20
        resources:
          limits:
            cpu: 200m
            memory: 384Mi
          requests:
            cpu: 25m
            memory: 128Mi
      imagePullSecrets:
      - name: ecr-credentials
