kubernetes/stayapp/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stayapp-ingress
spec:
  backend:
    serviceName: stayapp
    servicePort: '80'
